WIP: onboarding screen- fix grid and spacings

--- a/src/overview/onboarding/components/checklist-item.css
+++ b/src/overview/onboarding/components/checklist-item.css
@@ -1,7 +1,4 @@
 .checklist {
-    display: grid;
-    grid-template-columns: 80px auto;
-    grid-template-rows: 1fr 1fr;
     text-align: left;
     margin: 25px 0 36px -10px;
 }
@@ -15,8 +12,8 @@
 
 .subTitle {
     font-size: 0.875rem;
-    margin-left: 58px;
-    margin-top: -26px;
+    margin-left: 3.7rem;
+    margin-top: 0.5rem;
     cursor: pointer;
     margin-right: 20px;
     color: #bcc2bd;
