--- a/src/overview/onboarding/components/checklist.css
+++ b/src/overview/onboarding/components/checklist.css
@@ -7,7 +7,7 @@
 
 .subtext {
     text-align: left;
-    margin-top: -0.5rem;
+    margin-top: -0.3rem;
     color: #1a2f58;
     font-size: 1.5rem;
     margin-bottom: 3rem;
